--- a/TP3-SIM.csproj
+++ b/TP3-SIM.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Formularios\frmDistUniforme.Designer.cs">
       <DependentUpon>frmDistUniforme.cs</DependentUpon>
     </Compile>
+    <Compile Include="GeneradorPoisson.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
