--- a/TP3-SIM.csproj
+++ b/TP3-SIM.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -76,6 +77,7 @@
     <Compile Include="Formularios\frmDistUniforme.Designer.cs">
       <DependentUpon>frmDistUniforme.cs</DependentUpon>
     </Compile>
+    <Compile Include="GeneradorChiNormal.cs" />
     <Compile Include="GeneradorNormal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
