--- a/TP3-SIM.csproj
+++ b/TP3-SIM.csproj
@@ -48,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcumuladorDeFrecuencias.cs" />
-    <Compile Include="CalculadorChiCuadradoExpNegativo.cs" />
+    <Compile Include="DistribucionExpNegativa\CalculadorChiCuadradoExpNegativo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,7 +82,7 @@
     <Compile Include="GeneradorPoisson.cs" />
     <Compile Include="Clases de DistribucionNormal\GeneradorChiNormal.cs" />
     <Compile Include="Clases de DistribucionNormal\GeneradorNormal.cs" />
-    <Compile Include="GeneradorExpNegativa.cs" />
+    <Compile Include="DistribucionExpNegativa\GeneradorExpNegativa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
