--- a/TP3-SIM.csproj
+++ b/TP3-SIM.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Formularios\frmDistUniforme.Designer.cs">
       <DependentUpon>frmDistUniforme.cs</DependentUpon>
     </Compile>
+    <Compile Include="GeneradorChiPoisson.cs" />
     <Compile Include="GeneradorPoisson.cs" />
     <Compile Include="Clases de DistribucionNormal\GeneradorChiNormal.cs" />
     <Compile Include="Clases de DistribucionNormal\GeneradorNormal.cs" />
